<resources>
    <string name="app_name">ManageU</string>
    <string name="app_header">ManageU</string>
    <string name="app_tagline">your personal productivity manager</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="copyright">©2022 IIITD</string>
    <string name="email_enter">Email</string>
    <string name="password_enter">Password</string>
    <string name="name_enter">Name</string>
    <string name="age_enter">Age</string>
    <string name="role_enter">Role</string>
    <string name="pass_enter">Password</string>
    <string name="conf_pass_enter">Confirm Password</string>
    <string name="add_task">+ ADD TASK</string>
    <string name="add">+ Add</string>
    <string name="hint_role">Role</string>
    <string name="hint_activity">Activity</string>
    <string name="productivity">85% Productivity</string>
    <string name="unlock_reward">Unlock Reward</string>
    <string name="last_3_days">Yesterday\'s</string>
    <string name="last_6_days">Day Before Yesterday\'s</string>
    <string name="last_9_days">2 Days Prior</string>
    <string name="temp_message">You\'re Doing Great!! Keep Going!!</string>
    <string name="temp_message_1">SLOW AND STEADY WINS THE RACE!</string>
    <string name="temp_message_2">WORK HARDER! YOU\'RE ALMOST THERE</string>
    <string name="no_log_found">No Log Found till Now!!</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hint_recommender">Recommend For</string>
    <string-array name="work_duration">
        <item>None</item>
        <item>15 Minutes</item>
        <item>25 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>60 Minutes</item>
        <item>Custom</item>
    </string-array>

    <string-array name="long_break">
        <item>None</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>Custom</item>
    </string-array>

    <string-array name="short_break">
        <item>None</item>
        <item>1 Minute</item>
        <item>2 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>Custom</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>