<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADDBC6"
    tools:context=".SignUpPage"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/caveat"
            android:gravity="center"
            android:text="@string/app_header"
            android:textColor="@color/black"
            android:textSize="64sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.053" />

        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/noto_serif"
        android:text="@string/app_tagline"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.013" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/copyright"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.977" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#004D4D"
            android:text="@string/signup_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName17" />

        <EditText
            android:id="@+id/editTextTextPersonName12"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF "
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:hint="@string/name_enter"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.188"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTextPersonName13"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF "
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:hint="@string/email_enter"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12"
            app:layout_constraintVertical_bias="0.032"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTextPersonName14"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF "
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:hint="@string/age_enter"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName13"
            app:layout_constraintVertical_bias="0.05"
            tools:ignore="TouchTargetSizeCheck" />


        <EditText
            android:id="@+id/editTextTextPersonName16"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF "
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:hint="@string/pass_enter"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintVertical_bias="0.084"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTextPersonName17"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF "
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:hint="@string/conf_pass_enter"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName16"
            app:layout_constraintVertical_bias="0.111"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="361dp"
            android:layout_height="49dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:spinnerMode="dropdown"
            android:prompt="@string/hint_role"
            android:textAlignment="center"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName14"
            app:layout_constraintVertical_bias="0.046"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>