<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADDBC6"
    tools:context=".MainActivity">

    <!-- Card view for displaying the -->
    <!-- Pie chart and details of pie chart -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ADDBC6">


        <!--Linear layout to display pie chart -->
        <!-- and details of pie chart-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/firstProductivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/taskView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/last_3_days"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/timeView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="90%"
                        android:textColor="@color/Python"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/detailView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/bangers"
                    android:gravity="center"
                    android:text="@string/temp_message"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#ADDBC6"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:id="@+id/secondProductivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/taskView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/last_6_days"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/timeView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="90%"
                        android:textColor="@color/Python"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/detailView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/bangers"
                    android:gravity="center"
                    android:text="@string/temp_message_1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#ADDBC6"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:id="@+id/thirdProductivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/taskView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/last_9_days"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/timeView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="40%"
                        android:textColor="@color/CPP"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/detailView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/bangers"
                    android:gravity="center"
                    android:text="@string/temp_message_2"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/logLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/noLogFound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/bangers"
                    android:gravity="center"
                    android:text="@string/no_log_found"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>


    <!-- Another Card view for displaying -->
    <!-- Use of programming languages -->

</LinearLayout>
