<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADDBC6"
    tools:context=".AddingActivityTab">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/copyright"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/caveat"
        android:gravity="center"
        android:text="@string/app_header"
        android:textColor="@color/black"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/activityDetail"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="#FFFFFF "
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:hint="Activity Detail"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/startTime"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="#FFFFFF "
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:hint="Start time (Hours and Minutes)"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/endTime"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="#FFFFFF "
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:hint="End time (Hours and Minutes)"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="#004D4D"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTime"
        app:layout_constraintVertical_bias="0.401" />



    <Spinner
        android:id="@+id/spinner"
        android:layout_width="361dp"
        android:layout_height="49dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:spinnerMode="dropdown"
        android:prompt="@string/hint_role"
        android:textAlignment="center"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.21"
        app:layout_constraintHorizontal_bias="0.48"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>